--- a/1_praktinis/map_1.html
+++ b/1_praktinis/map_1.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pirmas Žemėlapis</title>
+    <title>Pirmas žemėlapis</title>
 </head>
 <body>
-    Žemėlapio pavadinimas -
+Žemėlapio pavadinimas -
 </body>
 </html>
