--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="map-item">
         <h2 class="map-title">Trečio darbo žemėlapis</h2>
         <a href="pages/trecio_darbo_zemelapis.html">
-          <img src="path-to-image3.jpg" alt="Third map" class="map-image">
+          <img src="img/3_darbo_zemelapis.webp" alt="Third map" class="map-image">
         </a>
       </div>
     </div>
@@ -60,7 +60,7 @@
       <a href="https://linkedin.com/in/andrius-antanaitis-65522726b/">Linkedin</a>
     </div>
     <div class="footer-copyright">
-      ©2025
+      <p>©2025</p>
     </div>
   </footer>
 </body>
