--- a/pages/kontaktai.html
+++ b/pages/kontaktai.html
@@ -27,8 +27,9 @@
             <a href="#contacts">Kontaktai</a>
         </nav>
     </header>
-    <section id="#contacts" class="aboutme-section">
-        <h2 class="contact-form">
+    <section id="#contacts" class="contact-form">
+        <div class="aboutme-section" >
+            <h2>Trumpai apie mane</h2>
             <p>
                 Mano vardas Andrius ir šiuo metu esu trečio kurso Kartografijos ir GIS studentas Vilniaus universitete.
                 Domiuosi patalpų vidaus kartografavimu bei erdvinės informacijos vizualizavimu.
@@ -38,7 +39,7 @@
                 Jei kilo klausimų apie svetainėje pateiktus žemėlapius arba svarstai apie Kartografijos ir GIS
                 studijas ir turi klausimų, užpildyk formą ir su tavimi bus susisiekta. :)
             </p>
-        </h2>
+        </div>
         <div>
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSebvH9EHN-NUVw6D0KBiQu69jkh7tl586hP1lTwR1Iva5WrmA/viewform?embedded=true"></iframe>
